--- a/views/about.hbs
+++ b/views/about.hbs
@@ -21,6 +21,8 @@
           <p>
             What started as a casual conversation between two students during a boring lecture, ignited the passion for beginning an adventure that will see them transform into a multi-disciplinary team with a focus on developing products that are enjoyable and impacts our community. 
             Dreamlink Studio is a software development start-up with an emphasis on transforming dreams into reality. We have a strong belief that with the increased need for students of all ages to carry out independent learning, it is vital to provide the right tools to set them up for success. Gone are the days of reading textbooks and memorising theories; now is the time for us to take control of how we learn. Whether it be creating the next application or planning our next move, our imaginations will drive us to our next innovation and milestone. 
+          </p>
+          <p>
             Our journey has just begun. 
           </p>
         </div>
@@ -40,7 +42,7 @@
         <figure class="img-container text-lg-left text-center my-0">
           <img src="images/team/about-profiles/harrison_verrios.jpg" class="profile-image img-fluid" alt="Harrison Verrios's Profile Image" loading="lazy" />
           <figcaption class="socials">
-            <a href="https://www.linkedin.com/in/harrison-verrios/" rel="noopener" target="_blank" title="Click to view Harrison's Linkedin profile"><i class="icon fab fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/harrison-verrios/" rel="noopener" target="_blank" title="Click to view Harrison's LinkedIn profile"><i class="icon fab fa-linkedin"></i></a>
           </figcaption>
         </figure>
       </div>
@@ -57,7 +59,7 @@
         <figure class="img-container text-lg-left text-center my-0">
           <img src="images/team/about-profiles/jeffrey_goh.jpg" class="profile-image img-fluid" alt="Jeffrey Goh's Profile Image" loading="lazy"/>
           <figcaption class="socials">
-            <a href="https://www.linkedin.com/in/jeffrey-goh-20479770/" rel="noopener" target="_blank" title="Click to view Jeffrey's Linkedin profile"><i class="icon fab fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/jeffrey-goh-20479770/" rel="noopener" target="_blank" title="Click to view Jeffrey's LinkedIn profile"><i class="icon fab fa-linkedin"></i></a>
           </figcaption>
         </figure>
       </div>
@@ -78,7 +80,7 @@
         <figure class="img-container text-lg-left text-center my-0">
           <img src="images/team/about-profiles/nicholas_parsons.jpg" class="profile-image img-fluid" alt="Nicholas Parsons's Profile Image" loading="lazy" />
           <figcaption class="socials">
-            <a href="https://www.linkedin.com/in/nick-parsons-ba006516b/" rel="noopener" target="_blank" title="Click to view Nick's Linkedin profile"><i class="icon fab fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/nick-parsons-ba006516b/" rel="noopener" target="_blank" title="Click to view Nick's LinkedIn profile"><i class="icon fab fa-linkedin"></i></a>
           </figcaption>
         </figure>
       </div>
@@ -95,7 +97,7 @@
         <figure class="img-container text-lg-left text-center my-0">
           <img src="images/team/about-profiles/wilbert_soetanto.jpg" class="profile-image img-fluid" alt="Wilbert Soetanto Profile Image" loading="lazy" />
           <figcaption class="socials">
-            <a href="https://www.linkedin.com/in/wilbert-soetanto/" rel="noopener" target="_blank" title="Click to view Willbert's Linkedin profile"><i class="icon fab fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/wilbert-soetanto/" rel="noopener" target="_blank" title="Click to view Willbert's LinkedIn profile"><i class="icon fab fa-linkedin"></i></a>
           </figcaption>
         </figure>
       </div>
@@ -113,9 +115,9 @@
       <div class="d-flex col-lg-2 align-items-center justify-content-center">
         <!-- 210 x 235 (ie: width*1.12 ratio)-->
         <figure class="img-container text-lg-left text-center my-0">
-          <img src="images/team/about-profiles/mark.jpg" class="profile-image img-fluid" alt="Matthew SzeHao Ong's Profile Image" loading="lazy"/>
+          <img src="images/team/about-profiles/matthew-szehao-ong.jpg" class="profile-image img-fluid" alt="Matthew SzeHao Ong's Profile Image" loading="lazy"/>
           <figcaption class="socials">
-            <a href="#" rel="noopener" target="_blank" title="Click to view Matthew's Linkedin profile"><i class="icon fab fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/matthew-szehao-ong" rel="noopener" target="_blank" title="Click to view Matthew's LinkedIn profile"><i class="icon fab fa-linkedin"></i></a>
           </figcaption>
         </figure>
       </div>
@@ -132,7 +134,7 @@
         <figure class="img-container text-lg-left text-center my-0">
           <img src="images/team/about-profiles/justine_chen.jpg" class="profile-image img-fluid" alt="Justine Chen's Profile Image" />
           <figcaption class="socials">
-            <a href="https://www.linkedin.com/in/justine-chen-140803182/" rel="noopener" target="_blank" title="Click to view Justine's Linkedin profile">
+            <a href="https://www.linkedin.com/in/justine-chen-140803182/" rel="noopener" target="_blank" title="Click to view Justine's LinkedIn profile">
               <i class="icon fab fa-linkedin"></i>
             </a>
           </figcaption>
@@ -159,7 +161,7 @@
         <figure class="img-container text-lg-left text-center my-0">
           <img src="images/team/about-profiles/summer_chong.jpg" class="profile-image img-fluid" alt="Summer Chong's Profile Image" />
           <figcaption class="socials">
-            <a href="http://www.linkedin.com/in/summer-soktengchong" rel="noopener" target="_blank" title="Click to view Summer's Linkedin profile">
+            <a href="http://www.linkedin.com/in/summer-soktengchong" rel="noopener" target="_blank" title="Click to view Summer's LinkedIn profile">
               <i class="icon fab fa-linkedin"></i>
             </a>
           </figcaption>
@@ -180,7 +182,7 @@
         <figure class="img-container text-lg-left text-center my-0">
           <img src="images/team/about-profiles/hui_wen_poh.jpg" class="profile-image img-fluid" alt="Hui Wen Poh's Profile Image" />
           <figcaption class="socials">
-            <a href="http://linkedin.com/in/hui-wen-poh-6bb48714b" rel="noopener" target="_blank" title="Click to view HW's Linkedin profile">
+            <a href="http://linkedin.com/in/hui-wen-poh-6bb48714b" rel="noopener" target="_blank" title="Click to view HW's LinkedIn profile">
               <i class="icon fab fa-linkedin"></i>
             </a>
           </figcaption>
@@ -189,7 +191,7 @@
       <div class="col-lg-10 mt-4 mt-lg-0" id="hui_wen_poh">
         <h4 class="capitalize">Hui Wen Poh (HW)</h4>
         <p>
-          Part of finance and graphics team. She is not into aesthetics but she ended up in graphics. Don't ask here how because she doesn't know herself.
+          Part of finance and graphics team. She is not into aesthetics but she ended up in graphics. Don't ask her how because she doesn't know herself.
           HW is a very fresh graduate with innocent mind with no impurities. Recruited by a mastermind and dang... Everything goes haywire. Nah... She's still innocent. Anyway, we will continue our dream into the unknown journey as a team... Summer said to be confident that we will stay as a team. So yes, we will and we can. 
           If we fall, fall hard else don’t fall.
         </p>
