--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -122,7 +122,7 @@
                 <i id="email-icon" class="contact-icon fas fa-envelope fa-fw"></i>
                 <p>Email us</p>
               </div>
-              <a class="email-link" href="mailto:admin@dreamlinkstudio.com">admin@dreamlinkstudio.com</a>
+              <a class="email-link" href="mailto:contact@dreamlinkstudio.com">contact@dreamlinkstudio.com</a>
             </div>
 
           </div>
