--- a/views/index.hbs
+++ b/views/index.hbs
@@ -154,7 +154,7 @@
       <div class="item flip-card" data-aos="zoom-in-up" data-aos-delay="900" data-aos-easing="ease-out-back">
         <div class="member-info flip-card-inner">
           <div class="flip-card-front">
-            <img src="images/team/index-profiles/placeholder.png" class="circle-img" alt="John Doe" loading="lazy" />
+            <img src="images/team/index-profiles/matthew-szehao-ong.jpg" class="circle-img" alt="Matthew Ong" loading="lazy" />
             <h4>Matthew Ong</h4>
             <p>Team Lead</p>
           </div>
