Update Matts Info

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -122,7 +122,7 @@
         </figure>
       </div>
       <div class="col-lg-10 mt-4 mt-lg-0" id="matthew-szehao-ong">
-        <h4 class="capitalize">Matthew SzeHao Ong</h4>
+        <h4 class="capitalize">Matthew Ong</h4>
         <p>
           Matthew has experience as an analyst in the credit industry, specialising in automation & data-driven areas. He has a background in business technology and software development and is a serial entrepreneur. At Dreamlink Studio, Matthew focuses on ensuring that our teams strive to operate at the highest possible levels of efficiency while ensuring that we stay within our project constraints. He passionately believes in creating an environment for his team to develop innovative products that will be enjoyed and have an impact on the community.
         </p>
