Removed owl carousel (only 1 product)

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -216,76 +216,19 @@
   <h1 class="display-5 text-center font-weight-light text-capitalize">Our Products</h1>
   <!-- Our Products -->
   <div class="container">
-    <div class="owl-products-carousel owl-carousel owl-theme">
-      <div class="item">
-        <div class="product-info card shadow">
-          <div class="img-wrapper">
-            <img class="card-img-top" src="images/products/dead-instinct/dead-instinct.png" alt="Dead Instinct product" loading="lazy">
-          </div>
-          <div class="card-body">
-            <h5 class="card-title">Dead Instinct</h5>
-            <p class="card-text">Dead Instinct is an endless runner that challenges the player to survive with only their athletic ability and wits to stay alive. Start running today and beat your high score! Available on both iOS & Android</p>
-            <div class="card-button-container d-flex justify-content-between">
-              <a href="/products#game-row-one" class="read-more-btn btn btn-md moon-btn btn-outline-dark">View App</a>
-              <div class="d-flex store-buttons align-items-center">
-                <a class="d-flex align-items-center align-self-center mr-2" aria-label="Apple Store Icon Link" href="#"><i class="apple-store store-icon fab fa-apple fa-fw"></i></a>
-                <a class="d-flex align-items-center align-self-center" aria-label="Android Store Icon Link" href="#"><i class="android-store store-icon fab fa-google-play fa-fw"></i></a>
-              </div>
-            </div>
-          </div>
+    <div class="item center">
+      <div class="product-info card shadow">
+        <div class="img-wrapper">
+          <img class="card-img-top" src="images/products/dead-instinct/dead-instinct.png" alt="Dead Instinct product" loading="lazy">
         </div>
-      </div>
-      <div class="item">
-        <div class="product-info card shadow">
-          <div class="img-wrapper">
-            <img class="card-img-top" src="images/products/dead-instinct/dead-instinct.png" alt="Dead Instinct product" loading="lazy">
-          </div>
-          <div class="card-body">
-            <h5 class="card-title">Dead Instinct</h5>
-            <p class="card-text">Dead Instinct is an endless runner that challenges the player to survive with only their athletic ability and wits to stay alive. Start running today and beat your high score! Available on both iOS & Android</p>
-            <div class="card-button-container d-flex justify-content-between">
-              <a href="/products#game-row-one" class="read-more-btn btn btn-md moon-btn btn-outline-dark">View App</a>
-              <div class="d-flex store-buttons align-items-center">
-                <a class="d-flex align-items-center align-self-center mr-2" aria-label="Apple Store Icon Link" href="#"><i class="apple-store store-icon fab fa-apple fa-fw"></i></i></a>
-                <a class="d-flex align-items-center align-self-center" aria-label="Android Store Icon Link" href="#"><i class="android-store store-icon fab fa-google-play fa-fw"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="item">
-        <div class="product-info card shadow">
-          <div class="img-wrapper">
-            <img class="card-img-top" src="images/products/dead-instinct/dead-instinct.png" alt="Dead Instinct product" loading="lazy">
-          </div>
-          <div class="card-body">
-            <h5 class="card-title">Dead Instinct</h5>
-            <p class="card-text">Dead Instinct is an endless runner that challenges the player to survive with only their athletic ability and wits to stay alive. Start running today and beat your high score! Available on both iOS & Android</p>
-            <div class="card-button-container d-flex justify-content-between">
-              <a href="/products#game-row-one" class="read-more-btn btn btn-md moon-btn btn-outline-dark">View App</a>
-              <div class="d-flex store-buttons align-items-center">
-                <a class="d-flex align-items-center align-self-center mr-2" aria-label="Apple Store Icon Link" href="#"><i class="apple-store store-icon fab fa-apple fa-fw"></i></i></a>
-                <a class="d-flex align-items-center align-self-center" aria-label="Android Store Icon Link" href="#"><i class="android-store store-icon fab fa-google-play fa-fw"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="item">
-        <div class="product-info card shadow">
-          <div class="img-wrapper">
-            <img class="card-img-top" src="images/products/dead-instinct/dead-instinct.png" alt="Dead Instinct product" loading="lazy">
-          </div>
-          <div class="card-body">
-            <h5 class="card-title">Dead Instinct</h5>
-            <p class="card-text">Dead Instinct is an endless runner that challenges the player to survive with only their athletic ability and wits to stay alive. Start running today and beat your high score! Available on both iOS & Android</p>
-           
-            <div class="card-button-container d-flex justify-content-between">
-              <a href="/products#game-row-one" class="read-more-btn btn btn-md moon-btn btn-outline-dark">View App</a>
-              <div class="d-flex store-buttons align-items-center">
-                <a class="d-flex align-items-center align-self-center mr-2" aria-label="Apple Store Icon Link" href="#"><i class="apple-store store-icon fab fa-apple fa-fw"></i></i></a>
-                <a class="d-flex align-items-center align-self-center" aria-label="Android Store Icon Link" href="#"><i class="android-store store-icon fab fa-google-play fa-fw"></i></a>
-              </div>
+        <div class="card-body">
+          <h5 class="card-title">Dead Instinct</h5>
+          <p class="card-text">Dead Instinct is an endless runner that challenges the player to survive with only their athletic ability and wits to stay alive. Start running today and beat your high score! Available on both iOS & Android</p>
+          <div class="card-button-container d-flex justify-content-between">
+            <a href="/products#game-row-one" class="read-more-btn btn btn-md moon-btn btn-outline-dark">View App</a>
+            <div class="d-flex store-buttons align-items-center">
+              <a class="d-flex align-items-center align-self-center mr-2" aria-label="Apple Store Icon Link" href="#"><i class="apple-store store-icon fab fa-apple fa-fw"></i></a>
+              <a class="d-flex align-items-center align-self-center" aria-label="Android Store Icon Link" href="#"><i class="android-store store-icon fab fa-google-play fa-fw"></i></a>
             </div>
           </div>
         </div>
