Removed placeholder products and buttons **

--- a/views/products.hbs
+++ b/views/products.hbs
@@ -14,7 +14,7 @@
       <div class="col-lg-6">
         <h1 class="display-5 text-center font-weight-light text-capitalize">Our Products</h1>
         <p>
-          Ranging from arcade games to education applications, 
+          Ranging from arcade games to educational applications, 
           we aim to transform how people learn and develop themselves in different
           areas.
         </p>
@@ -33,33 +33,6 @@
             <i class="icon fas fa-gamepad fa-fw"></i>
           </div>
           <p class="pt-2 mb-0">Games</p>
-        </button>
-      </div>
-
-      <div class="cat-btn-container col-md text-center">
-        <button class="cat-btn" data-scroll="true" data-to=".applications-cat" data-toggle="tooltip" data-placement="top" title="View our applications">
-          <div class="circle-icon">
-            <i class="icon fas fa-file-code fa-fw"></i>
-          </div>
-          <p class="pt-2 mb-0">Applications</p>
-        </button>
-      </div>
-
-      <div class="cat-btn-container col-md text-center" data-scroll="true" data-to=".software-cat" data-toggle="tooltip" data-placement="top" title="View our software">
-        <button class="cat-btn">
-          <div class="circle-icon">
-            <i class="icon fas fa-laptop fa-fw"></i>
-          </div>
-          <p class="pt-2 mb-0">Software</p>
-        </button>
-      </div>
-
-      <div class="cat-btn-container col-md text-center" data-scroll="true" data-to=".extensions-cat" data-toggle="tooltip" data-placement="top" title="View our extensions">
-        <button class="cat-btn">
-          <div class="circle-icon">
-            <i class="icon fas fa-cog fa-fw"></i>
-          </div>
-          <p class="pt-2 mb-0">Extensions</p>
         </button>
       </div>
     </div>
@@ -132,293 +105,6 @@
             </div>
           </div>
 
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <hr class="sep my-0 mb-3" />
-
-  <div class="applications-cat py-4">
-    <div class="d-md-none d-table icon-sep">
-      <i class="icon fas fa-file-code fa-fw"></i>
-    </div>
-    <h1 class="display-5 text-center font-weight-light text-capitalize">Applications</h1>
-    <div class="container my-4">
-      <div class="row text-center">
-        <div class="col-md-4">
-          <button class="btn-hidden" data-expand="#app1">
-            <div class="product-img-wrapper shadow">
-              <img src="https://via.placeholder.com/350x200/248.png/fff" class="product-img img-fluid" alt="App1"/>
-            </div>
-          </button>
-          <div class="store-buttons align-items-right mt-3" data-expand-hide="#zombie-game-info">
-            <a class="mr-3" href="#" target="_blank" title="Go to App Store">
-              <i class="apple-store store-icon fab fa-apple fa-fw"></i>
-            </a>
-            <a href="#" target="_blank" title="Go to Play Store">
-              <img src="/images/play-store-icon.png" class="android-store store-icon fa-fw" alt="Play store icon" />
-            </a>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <button class="btn-hidden" data-expand="#app2">
-            <div class="product-img-wrapper shadow">
-              <img src="https://via.placeholder.com/350x200/248.png/fff" class="product-img img-fluid" alt="App2"/>
-            </div>
-          </button>
-          <div class="store-buttons align-items-right mt-3" data-expand-hide="#zombie-game-info">
-            <a class="mr-3" href="#" target="_blank" title="Go to App Store">
-              <i class="apple-store store-icon fab fa-apple fa-fw"></i>
-            </a>
-            <a href="#" target="_blank" title="Go to Play Store">
-              <img src="/images/play-store-icon.png" class="android-store store-icon fa-fw" alt="Play store icon" />
-            </a>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <button class="btn-hidden" data-expand="#app3">
-            <div class="product-img-wrapper shadow">
-              <img src="https://via.placeholder.com/350x200/248.png/fff" class="product-img img-fluid" alt="App3"/>
-            </div>
-          </button>
-          <div class="store-buttons align-items-right mt-3" data-expand-hide="#zombie-game-info">
-            <a class="mr-3" href="#" target="_blank" title="Go to App Store">
-              <i class="apple-store store-icon fab fa-apple fa-fw"></i>
-            </a>
-            <a href="#" target="_blank" title="Go to Play Store">
-              <img src="/images/play-store-icon.png" class="android-store store-icon fa-fw" alt="Play store icon" />
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="expandable product-info-wrapper position-relative app-product-info mx-md-5" data-open="false">
-      <div class="panel-controls">
-        <button class="float-right close-btn btn-hidden" data-expand-close="true">
-          &times;
-        </button>
-      </div>
-
-      <div class="py-4">
-        <div id="app1" class="product-info">
-          <p>App #1</p>
-        </div>
-
-        <div id="app2" class="product-info">
-          <p>App #2</p>
-        </div>
-
-        <div id="app3" class="product-info">
-          <p>App #3</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <hr class="sep my-0 mb-3" />
-
-  <div class="software-cat py-4">
-    <div class="d-md-none d-table icon-sep">
-      <i class="icon fas fa-laptop fa-fw"></i>
-    </div>
-    <h1 class="display-5 text-center font-weight-light text-capitalize">Software</h1>
-    <div class="container my-4">
-      <div class="row text-center">
-        <div class="offset-md-2"></div>
-        <div class="col-md-4">
-          <button class="btn-hidden" data-expand="#software1">
-            <div class="product-img-wrapper shadow">
-              <img src="https://via.placeholder.com/350x200/d4351c.png/fff" class="product-img img-fluid" alt="Software1"/>
-            </div>
-          </button>
-          <div class="store-buttons align-items-right mt-3" data-expand-hide="#zombie-game-info">
-            <a class="mr-3" href="#" target="_blank" title="Go to App Store">
-              <i class="apple-store store-icon fab fa-apple fa-fw"></i>
-            </a>
-            <a href="#" target="_blank" title="Go to Play Store">
-              <img src="/images/play-store-icon.png" class="android-store store-icon fa-fw" alt="Play store icon" />
-            </a>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <button class="btn-hidden" data-expand="#software2">
-            <div class="product-img-wrapper shadow">
-              <img src="https://via.placeholder.com/350x200/d4351c.png/fff" class="product-img img-fluid" alt="Software2"/>
-            </div>
-          </button>
-          <div class="store-buttons align-items-right mt-3" data-expand-hide="#zombie-game-info">
-            <a class="mr-3" href="#" target="_blank" title="Go to App Store">
-              <i class="apple-store store-icon fab fa-apple fa-fw"></i>
-            </a>
-            <a href="#" target="_blank" title="Go to Play Store">
-              <img src="/images/play-store-icon.png" class="android-store store-icon fa-fw" alt="Play store icon" />
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="expandable product-info-wrapper games-product-info mx-md-5 position-relative" data-open="false">
-      <div class="panel-controls">
-        <button class="float-right close-btn btn-hidden" data-expand-close="true">
-          &times;
-        </button>
-      </div>
-      
-      <div class="py-4">
-        <div id="software1" class="product-info">
-          <div class="container">
-            <h3 class="ml-lg-2 pb-2 text-lg-left text-center">Framer</h3>
-            <div class="row">
-              <div class="col-lg">
-                <div class="video-thumbnail position-relative text-center">
-                  <img src="https://img.youtube.com/vi/4FXRmkdt3_8/mqdefault.jpg" class="img-fluid" alt="Framer IO YouTube Thumbnail"/>
-                  <button class="video-popup-btn" data-video-id="4FXRmkdt3_8">
-                    <i class="fas fa-play"></i>
-                  </button>
-                </div>
-              </div>
-              <div class="col-lg-8">
-                <div class="product-description mt-4 mt-lg-0">
-                  <p>
-                    Ready to design your first animation? Magic Motion is a visual way to create immersive prototypes. Just use the connector to draw a link between elements on the canvas. Manipulate size or position and Framer figures out everything else.
-                    Draw simple card animations or compose complex prototypes. The best part? Nothing you design is throwaway—Framer outputs animation values that can be used 1:1 in production.
-                  </p>
-                  <div class="store-buttons-container text-lg-left text-center">
-                    <a href="#" target="_blank" class="read-more-btn btn btn-md moon-btn-dark btn-outline-dark">
-                      <i class="apple-store store-icon fab fa-apple fa-fw"></i>
-                      Download on the App Store
-                    </a>
-                    <a href="#" target="_blank" class="read-more-btn btn btn-md moon-btn-dark btn-outline-dark ml-md-3 mt-3 mt-md-0">
-                      <img src="/images/play-store-icon.png" class="android-store store-icon fa-fw" alt="Play store icon" />
-                      Download it on Google Play
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div id="software2" class="product-info">
-          <div class="container">
-            <h3 class="ml-lg-2 pb-2 text-lg-left text-center">Firebase</h3>
-            <div class="row">
-              <div class="col-lg">
-                <div class="video-thumbnail position-relative text-center">
-                  <img src="https://img.youtube.com/vi/9kRgVxULbag/mqdefault.jpg" class="img-fluid" alt="Firebase YouTube Thumbnail"/>
-                  <button class="video-popup-btn" data-video-id="9kRgVxULbag">
-                    <i class="fas fa-play"></i>
-                  </button>
-                </div>
-              </div>
-              <div class="col-lg-8">
-                <div class="product-description mt-4 mt-lg-0">
-                  <p>
-                    Firebase is a platform for creating mobile and web applications developed by Google. It was originally an independent company founded in 2011. In 2014, Google acquired the platform and it is now their flagship offering for app development
-                  </p>
-                  <div class="store-buttons-container text-lg-left text-center">
-                    <a href="#" target="_blank" class="read-more-btn btn btn-md moon-btn-dark btn-outline-dark">
-                      <i class="apple-store store-icon fab fa-apple fa-fw"></i>
-                      Download on the App Store
-                    </a>
-                    <a href="#" target="_blank" class="read-more-btn btn btn-md moon-btn-dark btn-outline-dark ml-md-3 mt-3 mt-md-0">
-                      <img src="/images/play-store-icon.png" class="android-store store-icon fa-fw" alt="Play store icon" />
-                      Download it on Google Play
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-        </div>
-
-        <div id="software3" class="product-info">
-          <p>Game 3</p>
-        </div>
-      </div>
-    </div>
-
-  </div>
-
-  <hr class="sep my-0 mb-3" />
-
-  <div class="extensions-cat py-4">
-    <div class="d-md-none d-table icon-sep">
-      <i class="icon fas fa-cog fa-fw"></i>
-    </div>
-    <h1 class="display-5 text-center font-weight-light text-capitalize">Extensions</h1>
-    <div class="container my-4">
-      <div class="row text-center">
-        <div class="col-md-4">
-          <button class="btn-hidden" data-expand="#ext1">
-            <div class="product-img-wrapper shadow">
-              <img src="https://via.placeholder.com/350x200/0a2146.png/fff" class="product-img img-fluid" alt="Ext1"/>
-            </div>
-          </button>
-          <div class="store-buttons align-items-right mt-3" data-expand-hide="#zombie-game-info">
-            <a class="mr-3" href="#" target="_blank" title="Go to App Store">
-              <i class="apple-store store-icon fab fa-apple fa-fw"></i>
-            </a>
-            <a href="#" target="_blank" title="Go to Play Store">
-              <img src="/images/play-store-icon.png" class="android-store store-icon fa-fw" alt="Play store icon" />
-            </a>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <button class="btn-hidden" data-expand="#ext2">
-            <div class="product-img-wrapper shadow">
-              <img src="https://via.placeholder.com/350x200/0a2146.png/fff" class="product-img img-fluid" alt="Ext2"/>
-            </div>
-          </button>
-          <div class="store-buttons align-items-right mt-3" data-expand-hide="#zombie-game-info">
-            <a class="mr-3" href="#" target="_blank" title="Go to App Store">
-              <i class="apple-store store-icon fab fa-apple fa-fw"></i>
-            </a>
-            <a href="#" target="_blank" title="Go to Play Store">
-              <img src="/images/play-store-icon.png" class="android-store store-icon fa-fw" alt="Play store icon" />
-            </a>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <button class="btn-hidden" data-expand="#ext3">
-            <div class="product-img-wrapper shadow">
-              <img src="https://via.placeholder.com/350x200/0a2146.png/fff" class="product-img img-fluid" alt="Ext3"/>
-            </div>
-          </button>
-          <div class="store-buttons align-items-right mt-3" data-expand-hide="#zombie-game-info">
-            <a class="mr-3" href="#" target="_blank" title="Go to App Store">
-              <i class="apple-store store-icon fab fa-apple fa-fw"></i>
-            </a>
-            <a href="#" target="_blank" title="Go to Play Store">
-              <img src="/images/play-store-icon.png" class="android-store store-icon fa-fw" alt="Play store icon" />
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="expandable product-info-wrapper position-relative extension-product-info mx-md-5" data-open="false">
-      <div class="panel-controls">
-        <button class="float-right close-btn btn-hidden" data-expand-close="true">
-          &times;
-        </button>
-      </div>
-
-      <div class="py-4">
-        <div id="ext1" class="product-info">
-          <p>ext #1</p>
-        </div>
-
-        <div id="ext2" class="product-info">
-          <p>ext #2</p>
-        </div>
-
-        <div id="ext3" class="product-info">
-          <p>ext #3</p>
         </div>
       </div>
     </div>
