Updated HW's profile pics and description

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -191,12 +191,11 @@
       <div class="col-lg-10 mt-4 mt-lg-0" id="hui_wen_poh">
         <h4 class="capitalize">Hui Wen Poh (HW)</h4>
         <p>
-          Part of finance and graphics team. She is not into aesthetics but she ended up in graphics. Don't ask her how because she doesn't know herself.
-          HW is a very fresh graduate with innocent mind with no impurities. Recruited by a mastermind and dang... Everything goes haywire. Nah... She's still innocent. Anyway, we will continue our dream into the unknown journey as a team... Summer said to be confident that we will stay as a team. So yes, we will and we can. 
-          If we fall, fall hard else don’t fall.
+          HW is a mathematical person and enjoys being in the pool. She's also a chatter box and loves to immerse herself within the Chinese culture. 
+          She's not into aesthetics but she ended up in graphics. Don’t ask her how because even she doesn't know. HW is a very fresh graduate 
+          with an innocent mind and no impurities. She really likes working within a team as well as on her own.
         </p>
       </div>
     </div>
-
   </div>
 </section>
