Updated summer's bio

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -171,7 +171,7 @@
         <h4 class="capitalize">Summer Chong</h4>
         <p>
           Team lead of graphic team, allocating works and task to member of the graphic team. She discovered she passion for graphic after those long nights she pulled for doing graphic assignments during university although her role as a team lead question her creativity level, but she believes in her team that they will always pull through. 
-          She also told HW (Hui Wen) to be confident that we will stay as a team (communication to the max).
+          She also encourages her teammates to explore different ways to get their work done because she thinks arts is all about exploring.
           The only thing she likes to do when she is free is looking for good treats (especially the sweet kind). 
         </p>
       </div>
