Clean up mail and fix YT vid - Added YT trailer as video - Cleaned up mail transport

--- a/views/products.hbs
+++ b/views/products.hbs
@@ -80,7 +80,7 @@
               <div class="col-lg">
                 <div class="video-thumbnail position-relative text-center">
                   <img src="images/products/dead-instinct/dead-instinct-yt.png" class="img-fluid" alt="Dead Instinct YouTube Thumbnail"/>
-                  <button class="video-popup-btn" data-video-id="DS15qFLy9RQ">
+                  <button class="video-popup-btn" data-video-id="1K-gUqRlgfg">
                     <i class="fas fa-play"></i>
                   </button>
                 </div>
