Changes with Matt - Team member descriptions - Meta tags - 2021 Copyright Update

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -170,11 +170,11 @@
           <div class="flip-card-front">
             <img src="images/team/index-profiles/justine_chen.jpg" class="circle-img" alt="Justine Chen" loading="lazy" />
             <h4>Justine Chen</h4>
-            <p>Lead UI/UX</p>
+            <p>Lead UI/UX Designer</p>
           </div>
           <div class="flip-card-back">
             <h1>Justine</h1>
-            <p>UI/UX & Graphics</p>
+            <p>UI/UX & Graphics Designer</p>
             <a href="/about#justine_chen" class="btn btn-md btn-outline-light">Learn More</a>
           </div>
         </div>
@@ -184,11 +184,11 @@
           <div class="flip-card-front">
             <img src="images/team/index-profiles/summer_chong.jpg" class="circle-img" alt="Summer Chong" loading="lazy" />
             <h4>Summer Chong</h4>
-            <p>Lead Graphics</p>
+            <p>Lead Graphics Designer</p>
           </div>
           <div class="flip-card-back">
             <h1>Summer</h1>
-            <p>Graphics</p> 
+            <p>Graphics Designer</p> 
             <a href="/about#summer_chong" class="btn btn-md btn-outline-light">Learn More</a>
           </div>
         </div>
@@ -198,11 +198,11 @@
           <div class="flip-card-front">
             <img src="images/team/index-profiles/hui_wen_poh.jpg" class="circle-img" alt="Hui Wen Poh" loading="lazy" />
             <h4>Hui Wen Poh</h4>
-            <p>Graphics</p>
+            <p>Graphics Designer</p>
           </div>
           <div class="flip-card-back">
             <h1>HW</h1>
-            <p>Graphics and Finance</p>
+            <p>Graphics Designer and Finance</p>
             <a href="/about#hui_wen_poh" class="btn btn-md btn-outline-light">Learn More</a>
           </div>
         </div>
