--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -6,10 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!-- Prefer edge over IE -->
   
   <!-- SEO -->
-  <meta name="author" content="Dreamlink">
+  <meta name="author" content="Dreamlink Studio">
   <meta name="title" content="Welcome to Dreamlink Studio, an application and software development team">
   <meta name="description" content="Dreamlink Studio create various applications for the web, mobiles and more. They focus on both software as a service applications as well as game based applications">
-  <meta name="keyword" content="games applications mobile apps web apps dreamlink dreamers iphone android endless runner software SaS software as a service dead instinct emoji party zombie runner">
+  <meta name="keyword" content="games applications mobile apps web apps dreamlink dreamers iphone android iOS IOS endless runner software SaS software as a service dead instinct emoji party zombie runner">
 
   <!-- Favicon -->  
   <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png">
@@ -108,7 +108,7 @@
       <li><a href="/contact">Contact</a></li>
     </ul>
     <p>
-      <i class="fas fa-moon mr-1"></i> &copy; 2020 Dreamlink Studio</p>
+      <i class="fas fa-moon mr-1"></i> &copy; 2021 Dreamlink Studio</p>
     </p>
   </footer>
   
